# xnm

./: .gitignore  .tm_project2.cache  COPYING  ChangeLog  Makefile.am  NEWS  README  TODO  acinclude.m4  aclocal.m4  configure.in  doxygen.cfg  libxnm.pc.in  meson.build
.anjuta/: anjuta.session  dock-layout.xml
docs/: mainpage.h
python/: setup.py  xnm.py
src/: Makefile.am  SConstruct  meson.build  test-libxnm.c  xnm-parse-and-query.c  xnm-parser.y  xnm-retrieve.c  xnm-struct.c  xnm.h  xnm_private.h
tests/: libxnm_test.c  meson.build
