AC_INIT(configure.in)
AM_INIT_AUTOMAKE(libxnm, 0.1.3)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_YACC
AC_PROG_LEX 

AC_PROG_CPP

AM_PROG_LIBTOOL

DX_HTML_FEATURE(ON)
DX_CHM_FEATURE(OFF)
DX_CHI_FEATURE(OFF)
DX_MAN_FEATURE(OFF)
DX_RTF_FEATURE(OFF)
DX_XML_FEATURE(OFF)
DX_PDF_FEATURE(OFF)
DX_PS_FEATURE(OFF)

#DX_INIT_DOXYGEN(libxnm, doxygen.cfg, doxygen-doc)

#
# Checks for GLib
#
GLIB_REQUIRED_VERSION=2.6.0
GLIB_MODULES="glib-2.0 >= $GLIB_REQUIRED_VERSION gobject-2.0 gmodule-no-export-2.0"

PKG_CHECK_MODULES(GLIB, $GLIB_MODULES, :,
  AC_MSG_ERROR([
*** Glib $GLIB_REQUIRED_VERSION or better is required. The latest version of 
*** Glib is always available from ftp://ftp.gtk.org/.]))

PKG_CHECK_MODULES(PACKAGE, [glib-2.0])

AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)


AC_OUTPUT([
libxnm.pc:libxnm.pc.in
Makefile
src/Makefile
])
